--- a/.github/workflows/obsd-ompi.yml
+++ b/.github/workflows/obsd-ompi.yml
@@ -1,11 +1,11 @@
-name: OpenBSD
+name: obsd ompi
 
 on:
   push:
-    branches: [main-]
+    branches: [main]
 
 jobs:
-  test: # make sure the action works on a clean machine without building
+  test:
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
     runs-on: ${{ matrix.os.host }}
     strategy:
@@ -14,14 +14,17 @@ jobs:
         os:
           - name: openbsd
             architecture: x86-64
-            version: '7.1'
+            version: '7.4'
             host: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: get
+        uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5
+          path: .
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.6.2
+        uses: cross-platform-actions/action@v0.23.0
         env:
           FOO: A
           BAR: B
@@ -30,22 +33,16 @@ jobs:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
-          shell: bash          
+          shell: bash
           run: |
-            uname -a
-            echo $SHELL
-            pwd
-            ls -lah
-            whoami
-            env | sort
-            sudo pkg_add git
-            git clone https://github.com/hyoklee/hdf5
-            cd hdf5
-            sudo pkg_add cmake            
+            sudo pkg_add cmake
+            sudo pkg_add openmpi
+            export NPROCS=2
             mkdir build
             cd build
-            cmake ..
-            make
-            make test
-            
-
+            cmake -DBUILDNAME:STRING=ompi \
+            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+            -DSITE:STRING=obsd \
+            ..
+            ctest -D Experimental
