--- a/.github/workflows/obsd-ompi.yml
+++ b/.github/workflows/obsd-ompi.yml
@@ -43,6 +43,7 @@ jobs:
             cmake -DBUILDNAME:STRING=ompi \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+            -DMPIEXEC_PREFLAGS="-oversubscribe" \
             -DSITE:STRING=obsd \
             ..
             ctest -D Experimental
