test(msys2): checkout

--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -3,7 +3,7 @@ name: msys2
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
           - clang64
     runs-on: windows-latest
     steps:
-      - name: Setup MSYS2
+      - name: setup
         uses: msys2/setup-msys2@v2
         with:
           msystem: ${{matrix.sys}}
@@ -27,12 +27,19 @@ jobs:
             toolchain:p
             cmake:p
             ninja:p
-      - name: Test HDF5
+
+      - name: git
+        run: git config --global core.autocrlf input
+
+      - name: get
+        uses: actions/checkout@v4
+        with:
+          repository: hyoklee/hdf5
+          path: .
+
+      - name: build
         shell: mingw64 {0}
         run: |
-          uname -a
-          git clone https://github.com/HDFgroup/hdf5.git
-          cd hdf5
           mkdir build
           cd build
           cmake ..
