--- a/.github/workflows/cwin-ompi.yml
+++ b/.github/workflows/cwin-ompi.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@master
         with:
-          packages: cmake gcc-fortran hwloc libevent make ninja openmpi libopenmpi-devel perl zlib-devel
+          packages: cmake gcc-fortran hwloc libevent-devel make ninja openmpi libopenmpi-devel perl zlib-devel
       - name: Run cmake
         run: |
           git config --global core.autocrlf input
