--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -3,7 +3,7 @@ name: msys2
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -30,8 +30,6 @@ jobs:
         with:
           msystem: ${{matrix.sys}}
           update: true
-          install: >-
-            git
           pacboy: >-
             toolchain:p
             cmake:p
