--- a/.github/workflows/mac14-f.yml
+++ b/.github/workflows/mac14-f.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Test HDF4
         run: |
           export FC=/opt/homebrew/bin/gfortran
-          export CC=/opt/homebrew/bin/gcc
+          export CC=gcc
+          which gcc
           git clone https://github.com/HDFGroup/hdf5
           cd hdf5
           mkdir build
