--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - name: Run the script
         run: |
-          wsl --install --online -d ${{ matrix.os }}
+          wsl --install -d ${{ matrix.os }}
