--- a/.github/workflows/wsl-sus.yml
+++ b/.github/workflows/wsl-sus.yml
@@ -35,5 +35,5 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          $HOME/bin/cmake -DSITE:STRING=${{ matrix.os }} -DBUILDNAME:STRING="gcc" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" ..
+          /mnt/d/a/actions/actions/bin/cmake -DSITE:STRING=${{ matrix.os }} -DBUILDNAME:STRING="gcc" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" ..
           ctest -D Experimental
