--- a/.github/workflows/ws-suse-15.2-auto.yml
+++ b/.github/workflows/ws-suse-15.2-auto.yml
@@ -1,4 +1,4 @@
-name: wsl sus auto
+name: wsl suse-15.2 auto
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
             curl
       - name: build
         run: |
-          curl -O https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
+          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
           tar zxvf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           cd hdf5
