--- a/.github/workflows/wsl-suse-15.2-auto.yml
+++ b/.github/workflows/wsl-suse-15.2-auto.yml
@@ -25,7 +25,7 @@ jobs:
       - name: build
         run: |
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxvf snapshot-1.14.tar.gz
+          tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           cd hdf5
           ./configure
