--- a/.github/workflows/wsl-suse-15.2.yml
+++ b/.github/workflows/wsl-suse-15.2.yml
@@ -28,7 +28,7 @@ jobs:
           chmod u+x ./cmake-3.18.0-Linux-x86_64.sh 
           ./cmake-3.18.0-Linux-x86_64.sh --skip-license
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxvf snapshot-1.14.tar.gz
+          tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           mkdir build
           cd build
