--- a/.github/workflows/wsl-kali.yml
+++ b/.github/workflows/wsl-kali.yml
@@ -1,10 +1,10 @@
-name: wsl
+name: wsl kali
 
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 
 jobs:
@@ -23,17 +23,14 @@ jobs:
           additional-packages:
             dos2unix
             cmake
-            git
+            curl
             build-essential
       - name: Run the script
         run: |
-          ls
-          whoami
-          update-ca-certificates
-          git config --global http.sslverify false
-          git clone https://github.com/HDFGroup/hdf5
-          cd hdf5
+          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
+          tar zxf snapshot-1.14.tar.gz
+          cd hdf5-snapshot-1.14	  
           mkdir build
           cd build
-          cmake -DSITE:STRING=${{ matrix.os }} -DBUILDNAME:STRING="gcc" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" ..
+          cmake -DSITE:STRING="kali" -DBUILDNAME:STRING="4" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental
