--- a/.github/workflows/mac14-vos.yml
+++ b/.github/workflows/mac14-vos.yml
@@ -2,7 +2,7 @@ name: mac14 vos
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build_with_15_OS:
@@ -20,9 +20,6 @@ jobs:
       with:
         repository: hyoklee/hdf5
         path: ./hdf5
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest
     - name: Build
       continue-on-error: true
       run: |
@@ -45,20 +42,17 @@ jobs:
     - name: Setup cmake
       uses: jwlawson/actions-setup-cmake@v2.0.1
     - name: Use cmake
-      run: cmake --version    
+      run: cmake --version
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
         path: ./hdf5
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest
     - name: Build
       continue-on-error: true
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
-        cmake -GXcode \
+        cmake -G Xcode \
         -DCMAKE_SYSTEM_NAME=visionOS ..
   build_with_15_SIMULATOR_VISIONOS:
     name: "Xcode version 15.0.0, Target visionOS Simulator [arm64] Target SDK 1.0"
@@ -70,18 +64,15 @@ jobs:
     - name: Setup cmake
       uses: jwlawson/actions-setup-cmake@v2.0.1
     - name: Use cmake
-      run: cmake --version    
+      run: cmake --version
     - uses: actions/checkout@v4
       with:
         repository: hyoklee/hdf5
         path: ./hdf5
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: latest
     - name: Build
       continue-on-error: true
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
-        cmake -GXcode \
+        cmake -G Xcode \
         -DCMAKE_SYSTEM_NAME=visionOS ..
