--- a/.github/workflows/win19.yml
+++ b/.github/workflows/win19.yml
@@ -13,10 +13,11 @@ jobs:
         run: choco install ninja
       - name: get
         run: |
-          curl -O -L  https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.zip
-          unzip snapshot-1.14.zip
+          curl -s -O -L  https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.zip
+          unzip -q snapshot-1.14.zip
       - name: test
         run: |
+          cd  hdf5-snapshot-1.14
           mkdir build
           cd build
           cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="msvc" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
