--- a/.github/workflows/obsd.yml
+++ b/.github/workflows/obsd.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     name: A job to run test in OpenBSD
     env:
       MYTOKEN : "value1"
