--- a/.github/workflows/obsd.yml
+++ b/.github/workflows/obsd.yml
@@ -26,7 +26,7 @@ jobs:
           pwd
           ls -lah
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-	  
+          tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           mkdir build
           cd build
