--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -21,8 +21,13 @@ jobs:
           prepare: |
             set -e
             pkg install cmake
+            pkg install curl
           run: |
             set -e
+            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
+            tar zxf snapshot-1.14.tar.gz
+            cd hdf5-snapshot-1.14
             mkdir build
-            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..	    
+            cd build
+            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
             ctest -D Experimental -C Release
