--- a/.github/workflows/nbsd.yml
+++ b/.github/workflows/nbsd.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os:
           - name: netbsd
-            architecture: [x86-64, arm64]
+            architecture: ['x86-64', 'arm64']
             version: ['9.3', '10.0']
             host: ubuntu-latest
     steps:
