--- a/.github/workflows/arm64-nbsd.yml
+++ b/.github/workflows/arm64-nbsd.yml
@@ -14,7 +14,7 @@ jobs:
         os:
           - name: netbsd
             architecture: arm64
-            version: ['9.3', '10.0']
+            version: '10.0'
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
