ci(nbsd): use 9.3

--- a/.github/workflows/nbsd.yml
+++ b/.github/workflows/nbsd.yml
@@ -14,7 +14,7 @@ jobs:
         os:
           - name: netbsd
             architecture: x86-64
-            version: '10.0'
+            version: '9.3' # 10.0 doesn't work
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
