--- a/.github/workflows/arm64-nbsd.yml
+++ b/.github/workflows/arm64-nbsd.yml
@@ -14,7 +14,7 @@ jobs:
         os:
           - name: netbsd
             architecture: arm64
-            version: '9.3' # 10.0 doesn't work
+            version: '10.0' # 9.3 doesn't work
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
             sudo pkgin -y install mozilla-rootcerts-openssl
             export LD_LIBRARY_PATH=/usr/pkg/lib
             curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            gtar zxvf snapshot-1.14.tar.gz
+            tar zxvf snapshot-1.14.tar.gz
             cd hdf5-snapshot-1.14
             mkdir build
             cd build
