--- a/.github/workflows/arm64-nbsd.yml
+++ b/.github/workflows/arm64-nbsd.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.23.0
+        uses: cross-platform-actions/action@master
         env:
           FOO: A
           BAR: B
