--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -15,16 +15,13 @@ jobs:
       - name: test
         uses: vmactions/solaris-vm@v1
         with:
-          envs: 'MYTOKEN MYTOKEN2'
           release: "11.4-gcc"
           usesh: true
           prepare: |
-            pkg install gnu-tar
+            pkg install curl
           run:
-            env
             ls
-            echo "OK"
-#            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
+            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
 #            gtar zxvf snapshot-1.14.tar.gz
 #            cd hdf5-snapshot-1.14
 #            mkdir build
