--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -18,13 +18,12 @@ jobs:
           release: "11.4-gcc"
           usesh: true
           prepare: |
-            pkg install curl
+            pkg install cmake
           run:
-            ls
             curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-#            gtar zxvf snapshot-1.14.tar.gz
-#            cd hdf5-snapshot-1.14
-#            mkdir build
-#            cd build
-#            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-#            ctest -D Experimental -C Release
+            gtar zxvf snapshot-1.14.tar.gz
+            cd hdf5-snapshot-1.14
+            mkdir build
+            cd build
+            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            ctest -D Experimental -C Release
