--- a/.github/workflows/nbsd-9.3.yml
+++ b/.github/workflows/nbsd-9.3.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@0.23.0
+        uses: cross-platform-actions/action@v0.23.0
         with:
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
