--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -17,13 +17,16 @@ jobs:
         with:
           release: "11.4-gcc"
           usesh: true
-          prepare: |
-            pkg install cmake
           run: |
+            curl -O https://cmake.org/files/v3.18/cmake-3.18.0-Linux-x86_64.sh
+            chmod u+x ./cmake-3.18.0-Linux-x86_64.sh
+            ./cmake-3.18.0-Linux-x86_64.sh --skip-license
+            pwd
+            ls
             curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-            gtar zxvf snapshot-1.14.tar.gz
+            gtar zxf snapshot-1.14.tar.gz
             cd hdf5-snapshot-1.14
             mkdir build
             cd build
-            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-            ctest -D Experimental -C Release
+            ../../bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            ../../bin/ctest -D Experimental -C Release
