--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -28,5 +28,5 @@ jobs:
             cd hdf5-snapshot-1.14
             mkdir build
             cd build
-            ../../bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-            ../../bin/ctest -D Experimental -C Release
+            /home/runner/work/actions/actions/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            /home/runner/work/actions/actions/bin/ctest -D Experimental -C Release
