--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -1,4 +1,4 @@
-name: win19
+name: win
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: get
         run: |
