--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -17,5 +17,5 @@ jobs:
           cd  hdf5-snapshot-1.14
           mkdir build
           cd build
-          cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING=win -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
