--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -25,10 +25,12 @@ jobs:
             gtar zxf snapshot-1.14.tar.gz
             pwd
             ls
+            ls bin/
             cd hdf5-snapshot-1.14
             ls bin
             ls ~/bin
             mkdir build
             cd build
-            ~/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-            ~/bin/ctest -D Experimental -C Release
+            ls ../../bin
+            ../../bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            ../../bin/ctest -D Experimental -C Release
