--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -31,6 +31,7 @@ jobs:
             ls ~/bin
             mkdir build
             cd build
-            ls ../../bin
+            ls -l ../../bin
+            chmod u+x ../../bin/*
             ../../bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
             ../../bin/ctest -D Experimental -C Release
