--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -20,7 +20,7 @@ jobs:
           copyback: false
           prepare: |
             set -e
-            pkg install gcc-g++
+            pkg install developer/build/cmake
           run: |
             curl -s -O https://cmake.org/files/v3.18/cmake-3.18.0.tar.gz
             gtar zxf cmake-3.18.0.tar.gz
