--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -22,6 +22,7 @@ jobs:
             set -e
             pkg install developer/build/cmake
           run: |
+            cmake --version
             curl -s -O https://cmake.org/files/v3.18/cmake-3.18.0.tar.gz
             gtar zxf cmake-3.18.0.tar.gz
             cd cmake-3.18.0
@@ -35,5 +36,5 @@ jobs:
             mkdir build
             cd build
             ls -l /tmp/bin
-            /tmp/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-            /tmp/bin/ctest -D Experimental -C Release
+            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            ctest -D Experimental -C Release
