--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -20,9 +20,10 @@ jobs:
           copyback: false
           prepare: |
             set -e
-            pkg install developer/build/cmake
+            pkg install developer/gcc/gcc-c++-11
           run: |
-            cmake --version
+            gcc --version
+            g++ --version
             curl -s -O https://cmake.org/files/v3.18/cmake-3.18.0.tar.gz
             gtar zxf cmake-3.18.0.tar.gz
             cd cmake-3.18.0
