--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -37,5 +37,5 @@ jobs:
             mkdir build
             cd build
             ls -l /tmp/bin
-            cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-            ctest -D Experimental -C Release
+            /tmp/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+            /tmp/bin/ctest -D Experimental -C Release
