--- a/.github/workflows/sol-auto.yml
+++ b/.github/workflows/sol-auto.yml
@@ -2,7 +2,7 @@ name: sol auto gcc
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -23,10 +23,16 @@ jobs:
             pkg install autoconf automake curl libtool gnu-tar
           run: |
             set -e
+            curl -O https://ftpmirror.gnu.org/autoconf/autoconf-2.71.tar.gz
+            gtar zxf autoconf-2.71.tar.gz
+            cd autoconf-2.71
+            ./configure --prefix=/tmp
+            make
+            make install
+            cd ..
             curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
             gtar zxf snapshot-1.14.tar.gz
             cd hdf5-snapshot-1.14
-            ./autogen.sh
             ./configure
             make
             make check
