--- a/.github/workflows/sol-auto.yml
+++ b/.github/workflows/sol-auto.yml
@@ -23,7 +23,7 @@ jobs:
             pkg install autoconf automake curl libtool gnu-tar
           run: |
             set -e
-            curl -O https://ftpmirror.gnu.org/autoconf/autoconf-2.71.tar.gz
+            curl -O -L https://ftpmirror.gnu.org/autoconf/autoconf-2.71.tar.gz
             gtar zxf autoconf-2.71.tar.gz
             cd autoconf-2.71
             ./configure --prefix=/tmp
