--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -2,7 +2,7 @@ name: sol gcc
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -27,7 +27,7 @@ jobs:
             curl -s -O https://cmake.org/files/v3.18/cmake-3.18.0.tar.gz
             gtar zxf cmake-3.18.0.tar.gz
             cd cmake-3.18.0
-            ./configure --prefix=/tmp
+            ./bootstrap --system-curl --prefix=/tmp
             make
             make install
             cd ..
@@ -39,3 +39,4 @@ jobs:
             ls -l /tmp/bin
             /tmp/bin/cmake -DSITE:STRING="sol-11.4" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
             /tmp/bin/ctest -D Experimental -C Release
+
