--- a/.github/workflows/lin-icx.yml
+++ b/.github/workflows/lin-icx.yml
@@ -16,7 +16,8 @@ jobs:
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all          sudo apt update
+          sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all main"
+          sudo apt update
           sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
       - name: test
         shell: bash
