--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -12,7 +12,7 @@ jobs:
         shell: bash
         run: |
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          gtar zxf snapshot-1.14.tar.gz
+          tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           mkdir build
           cd build
